# DiskChunGS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.devcontainer/: devcontainer.json
cfg/ORB_SLAM3/Monocular/Replica/: office1.yaml
cfg/ORB_SLAM3/Monocular/TUM/: tum_freiburg1_desk.yaml
cfg/ORB_SLAM3/Stereo/KITTI/: KITTI03.yaml  KITTI04-12.yaml
cfg/gaussian_mapper/Monocular/Replica/: replica_mono.yaml
cfg/gaussian_mapper/Monocular/TUM/: tum_mono.yaml
cfg/gaussian_mapper/RGB-D/Replica/: replica_rgbd.yaml
cfg/gaussian_mapper/RGB-D/TUM/: tum_rgbd.yaml
cfg/gaussian_mapper/Stereo/KITTI/: KITTI.yaml
cuda_rasterizer/: operate_points.h  stereo_vision.h
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.jetson_base  Dockerfile.jetson_dev  docker-compose.yml  docker-compose_jetson.yml  docker-entrypoint.sh
eval/: eval.py  run.py
examples/: kitti_stereo.cpp  replica_mono.cpp  replica_rgbd.cpp  tum_mono.cpp  tum_rgbd.cpp  view_result.cpp
include/: camera.h  chunk_types.h  gaussian_mapper.h  gaussian_mapper_external.h  types.h
include/depth/: guided_mvs.h  mono_depth.h  stereo_depth.h  stereo_vision.h
include/geometry/: operate_points.h  point2d.h  point3d.h  point_cloud.h
include/model/: gaussian_model.h
include/rendering/: frustum_culler.h  gaussian_rasterizer.h  gaussian_renderer.h
include/scene/: gaussian_keyframe.h  gaussian_scene.h  keyframe_selection.h
include/utils/: debugging_utils.h  depth_utils.h  general_utils.h  graphics_utils.h  loss_utils.h  profiling.h  tensor_utils.h  trajectory_viewer.h
ros_wrapper/: CMakeLists.txt  package.xml
ros_wrapper/include/: wrapper.h
ros_wrapper/launch/: diskchungs.launch
ros_wrapper/src/: node.cpp  wrapper.cpp
scripts/: all.sh  build.sh  build_ros.sh  clean.sh  kitti_stereo.sh  replica_mono.sh  replica_rgbd.sh  tum_mono.sh  tum_rgbd.sh
src/depth/: guided_mvs.cpp  mono_depth.cpp  stereo_depth.cpp  stereo_vision.cu
src/geometry/: operate_points.cu
src/mapper/: mapper_config.cpp  mapper_core.cpp  mapper_depth.cpp  mapper_external.cpp  mapper_initialization.cpp  mapper_io.cpp  mapper_operations.cpp  mapper_parameters.cpp
src/model/: model_core.cpp  model_memory.cpp  model_optimization.cpp  model_pruning.cpp  model_storage.cpp
src/rendering/: frustum_culler.cpp  gaussian_renderer.cpp
src/scene/: gaussian_keyframe.cpp  gaussian_scene.cpp  keyframe_selection.cpp
src/utils/: debugging_utils.cpp  trajectory_viewer.cpp
viewer/: imgui_viewer.cpp  imgui_viewer.h
