<?xml version="1.0"?>
<package format="2">
  <name>diskchungs_ros</name>
  <version>1.0.0</version>
  <description>ROS wrapper for DiskChunGS system</description>

  <maintainer email="casimir.feldmann@gmail.com">Robotic Systems Lab, ETH Zurich</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
  
  <export>
  </export>
</package>